Deploy pages from Travis build 353
Build URL: https://travis-ci.org/rstats-db/DBI/167957229
Commit: a74b76009d9f02cc45a09ff1fbeefe3ec148e2a3

--- a/dbWithTransaction.html
+++ b/dbWithTransaction.html
@@ -145,7 +145,7 @@ environment.</p>
   <span class="keyword">}</span><span class="keyword">)</span><span class="keyword">,</span>
   <span class="argument">error</span> <span class="argument">=</span> <span class="symbol">identity</span>
 <span class="keyword">)</span></div>
-<div class='output'>&lt;Rcpp::exception in eval(substitute(expr), envir, enclos): near &quot;dist&quot;: syntax error&gt;
+<div class='output'>&lt;Rcpp::exception in evalq(sys.calls(), &lt;environment&gt;): near &quot;dist&quot;: syntax error&gt;
 </div>
 <div class='input'><span class="functioncall"><a href='dbReadTable.html'>dbReadTable</a></span><span class="keyword">(</span><span class="symbol">con</span><span class="keyword">,</span> <span class="string">"cars"</span><span class="keyword">)</span>   <span class="comment"># still 6 rows</span></div>
 <div class='output'>  speed dist
